tests/fixtures/invalid/pow_bytes_none_set.py
# Cannot call pow() with Bytes, None, Set[int]
x = pow(b"hello", None, {1, 2, 3})
